# brief_noticias

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/src/noticias_api/: config.py  main.py  scheduler.py
api/src/noticias_api/api/: _aggregations.py  analytics.py  authors.py  briefings.py  clusters.py  entities.py  notes.py  qa.py  runs.py  sagas.py  search.py  sources.py  subscriptions.py  telegram_admin.py  telegram_webhook.py
api/src/noticias_api/db/: __init__.py  models.py  seed.py  session.py
api/src/noticias_api/notifiers/: alerts.py  bot_handler.py  digest.py  poller.py  telegram.py
api/src/noticias_api/pipeline/: analyze.py  author_vectors.py  authors.py  cluster.py  embed.py  entities.py  (+8 more)
api/tests/: conftest.py  test_alerts.py  test_analytics_api.py  test_analyze.py  test_authors_api.py  test_authors_parser.py  test_authors_persist.py  test_authors_vectors.py  test_bot_handler.py  test_briefings_api.py  test_briefings_topic_filter.py  test_cluster.py  test_cluster_merge.py  test_clusters_api.py  test_clusters_regenerate.py  test_config.py  test_digest.py  test_digest_filtered.py  test_embed.py  test_entities.py  test_extract.py  test_extract_authors.py  test_fetch.py  test_fetch_authors.py  test_models.py  test_notes_api.py  test_persist.py  test_qa_api.py  test_qa_crag.py  test_qa_hyde.py  test_qa_memory.py  test_qa_rerank.py  test_qa_retrieval.py  test_qa_synthesis.py  test_rank.py  test_runner.py  test_runs_api.py  test_saga.py  test_scheduler_setup.py  test_search_api.py  (+6 more)
(+112 files in other folders)
